Bug 737071: Remove LayerManagerOGL::glForResources() because it's not needed and causes performance degradtion sometimes. r=Bas